Add rel noopener to all instance of _blank

--- a/app/assets/templates/contact.html
+++ b/app/assets/templates/contact.html
@@ -27,27 +27,27 @@
     <hr>
     <ul class='inline-list'>
       <li>
-        <a target='_blank' href='https://twitter.com/swanaudio'>
+        <a target='_blank' href='https://twitter.com/swanaudio' rel="noopener noreferrer">
           <i class='fa fa-twitter'></i>
         </a>
       </li>
       <li>
-        <a target='_blank' href='https://www.linkedin.com/company/swan-audio'>
+        <a target='_blank' href='https://www.linkedin.com/company/swan-audio' rel="noopener noreferrer">
           <i class='fa fa-linkedin'></i>
         </a>
       </li>
       <li>
-        <a target='_blank' href='https://www.facebook.com/swanaudioca'>
+        <a target='_blank' href='https://www.facebook.com/swanaudioca' rel="noopener noreferrer">
           <i class='fa fa-facebook'></i>
         </a>
       </li>
       <li>
-        <a target='_blank' href='https://www.instagram.com/swan.audio'>
+        <a target='_blank' href='https://www.instagram.com/swan.audio' rel="noopener noreferrer">
           <i class='fa fa-instagram'></i>
         </a>
       </li>
       <li>
-        <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ'>
+        <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ' rel="noopener noreferrer">
           <i class='fa fa-youtube'></i>
         </a>
       </li>
