--- a/app/assets/templates/newsletter-signup.html
+++ b/app/assets/templates/newsletter-signup.html
@@ -1,4 +1,4 @@
-<form action='//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1' method='post' target='_blank' novalidate ngNoForm>
+<form action='//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1' method='post' target='_blank' novalidate ngNoForm rel="noopener noreferrer">
   <h2>Newsletter</h2>
   <p>
     Get the latest and greatest, directly to your inbox.
