--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -12,10 +12,10 @@
     <a routerLink='/contact' routerLinkActive='active'>Contact</a>
   </nav>
   <aside>
-    <a target='_blank' href='https://twitter.com/swanaudio'><i class='fab fa-twitter'></i></a>
-    <a target='_blank' href='https://www.facebook.com/swanaudioca'><i class='fab fa-facebook'></i></a>
-    <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ'><i class='fab fa-youtube'></i></a>
-    <a target='_blank' href='https://www.instagram.com/swan.audio'><i class='fab fa-instagram'></i></a>
+    <a target='_blank' href='https://twitter.com/swanaudio' rel="noopener noreferrer"><i class='fab fa-twitter'></i></a>
+    <a target='_blank' href='https://www.facebook.com/swanaudioca' rel="noopener noreferrer"><i class='fab fa-facebook'></i></a>
+    <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ' rel="noopener noreferrer"><i class='fab fa-youtube'></i></a>
+    <a target='_blank' href='https://www.instagram.com/swan.audio' rel="noopener noreferrer"><i class='fab fa-instagram'></i></a>
   </aside>
 </header>
 <main role='main'>
