Temporarily remove instagram display
It's been broken so many times. They don't support what we want to
accomplish here. Needs a re-examination, and it's not really worth the
time investment currently.

--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -37,7 +37,7 @@
       <a routerLink='/privacy'><i class='fal fa-user-secret'></i>Privacy</a>
     </section>
     <recent-tweets></recent-tweets>
-    <recent-instagram></recent-instagram>
+    <!--<recent-instagram></recent-instagram>-->
   </div>
 
   <p>&copy; 2017 Swan Audio Inc., All Rights Reserved</p>
